Restructured project by moving benchmark code to its own modules, and by splitting the websocket module into client and server. Introduced also Jetty7 modules to compare performances using the benchmark modules.