@@ -14,28 +14,19 @@
     <dependencies>
         <dependency>
             <groupId>org.cometd.java</groupId>
-            <artifactId>cometd-java-client</artifactId>
-            <version>${project.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.cometd.java</groupId>
-            <artifactId>cometd-java-server</artifactId>
-            <version>${project.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.cometd.java</groupId>
-            <artifactId>cometd-websocket-jetty</artifactId>
-            <version>${project.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.cometd.java</groupId>
             <artifactId>cometd-java-annotations</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
+            <groupId>org.cometd.java</groupId>
+            <artifactId>cometd-java-client</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
             <groupId>org.eclipse.jetty</groupId>
-            <artifactId>jetty-servlets</artifactId>
+            <artifactId>jetty-server</artifactId>
             <version>${jetty-version}</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.eclipse.jetty</groupId>
@@ -44,98 +35,10 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>org.codehaus.jackson</groupId>
-            <artifactId>jackson-mapper-asl</artifactId>
-            <version>${jackson-version}</version>
+            <groupId>org.eclipse.jetty</groupId>
+            <artifactId>jetty-servlets</artifactId>
+            <version>${jetty-version}</version>
         </dependency>
     </dependencies>
 
-    <profiles>
-        <profile>
-            <id>server</id>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.codehaus.mojo</groupId>
-                        <artifactId>exec-maven-plugin</artifactId>
-                        <configuration>
-                            <executable>java</executable>
-                            <arguments>
-                                <argument>-showversion</argument>
-                                <argument>-Xmx2g</argument>
-                                <argument>-Xms2g</argument>
-                                <argument>-Xmn1g</argument>
-                                <argument>-XX:+PrintCommandLineFlags</argument>
-                                <argument>-XX:-UseSplitVerifier</argument>
-                                <argument>-XX:+PrintGCDetails</argument>
-                                <argument>-XX:+UseParallelOldGC</argument>
-                                <argument>-XX:-UseAdaptiveSizePolicy</argument>
-                                <argument>-XX:+UseNUMA</argument>
-                                <argument>-XX:+AggressiveOpts</argument>
-                                <!--<argument>-XX:+UseConcMarkSweepGC</argument>-->
-                                <!--<argument>-XX:+UnlockExperimentalVMOptions</argument>-->
-                                <!--<argument>-XX:+UseG1GC</argument>-->
-                                <argument>-cp</argument>
-                                <classpath />
-                                <argument>org.cometd.benchmark.BayeuxLoadServer</argument>
-                            </arguments>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
-            <dependencies>
-                <dependency>
-                    <groupId>org.eclipse.jetty</groupId>
-                    <artifactId>jetty-servlet</artifactId>
-                    <version>${jetty-version}</version>
-                    <scope>runtime</scope>
-                </dependency>
-                <dependency>
-                    <groupId>org.slf4j</groupId>
-                    <artifactId>slf4j-simple</artifactId>
-                    <scope>runtime</scope>
-                </dependency>
-            </dependencies>
-        </profile>
-        <profile>
-            <id>client</id>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.codehaus.mojo</groupId>
-                        <artifactId>exec-maven-plugin</artifactId>
-                        <configuration>
-                            <executable>java</executable>
-                            <arguments>
-                                <argument>-showversion</argument>
-                                <argument>-Xmx2g</argument>
-                                <argument>-Xms2g</argument>
-                                <argument>-Xmn1g</argument>
-                                <argument>-XX:+PrintCommandLineFlags</argument>
-                                <argument>-XX:-UseSplitVerifier</argument>
-                                <argument>-XX:+PrintGCDetails</argument>
-                                <argument>-XX:+UseParallelOldGC</argument>
-                                <argument>-XX:-UseAdaptiveSizePolicy</argument>
-                                <argument>-XX:+UseNUMA</argument>
-                                <argument>-XX:+AggressiveOpts</argument>
-                                <!--<argument>-XX:+UseConcMarkSweepGC</argument>-->
-                                <!--<argument>-XX:+UnlockExperimentalVMOptions</argument>-->
-                                <!--<argument>-XX:+UseG1GC</argument>-->
-                                <argument>-cp</argument>
-                                <classpath />
-                                <argument>org.cometd.benchmark.BayeuxLoadClient</argument>
-                            </arguments>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
-            <dependencies>
-                <dependency>
-                    <groupId>org.slf4j</groupId>
-                    <artifactId>slf4j-simple</artifactId>
-                    <scope>runtime</scope>
-                </dependency>
-            </dependencies>
-        </profile>
-    </profiles>
 </project>
